syntax = "proto3";

package v1;

option go_package = "github.com/jibudata/archival-api;v1";

message ResourceKey {
  string name = 1;
}

message DefaultResourceRequest {
  string library_manager_name = 1;
  string ip_address = 2;
}
